--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav li{
     background-color: antiquewhite;
 }
 .leftpartition img{
-    width: 90%;
+    width: 80%;
     margin: 15px;
 }
 .info{
@@ -274,8 +274,10 @@ p{
     font-style: italic;
     text-decoration: underline;
 }
-.nav1 a{
+.nav1 li{
     font-size: 2.5vw;
+    margin: 10px;
+    padding: 10px;
 }
 nav ul li a:hover, nav ul li a:focus{
     text-decoration : underline;
